--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
     <title>Tracer</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../scripts/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -27,10 +27,10 @@
         </div>
     </div>
 
-    <script src="../scripts/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="../scripts/jquery.signalR-2.2.0.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="../scripts/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="../scripts/vendor/signalr/jquery.signalr.min.js" type="text/javascript"></script>
+    <script src="../scripts/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../signalr/hubs" type="text/javascript"></script>
-    <script src="../scripts/tracer.js" type="text/javascript"></script>
+    <script src="../scripts/public/tracer.js" type="text/javascript"></script>
 </body>
 </html>
