Added Trace/MethodIds to trace message.
TraceId functionality is incomplete.

--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -22,7 +22,17 @@
         </div>
         <div class="well well-lg">
             <div class="row">
-                <div id="discussion"></div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>TraceId</th>
+                            <th>MethodId</th>
+                            <th>Message</th>
+                        </tr>
+                    </thead>
+                    <tbody id="messages">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
