--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -27,7 +27,8 @@
                         <tr>
                             <th>TraceId</th>
                             <th>MethodId</th>
-                            <th>Message</th>
+                            <th>TraceEvent</th>
+                            <th>MethodName</th>
                         </tr>
                     </thead>
                     <tbody id="messages">
