Added Timestamp to TraceMessage

--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -29,6 +29,7 @@
                             <th>MethodId</th>
                             <th>TraceEvent</th>
                             <th>MethodName</th>
+                            <th>Timestamp</th>
                         </tr>
                     </thead>
                     <tbody id="messages">
