TraceMessage.ParentMethodId functionality

--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -27,6 +27,7 @@
                         <tr>
                             <th>TraceId</th>
                             <th>MethodId</th>
+                            <th>ParentMethodId</th>
                             <th>TraceEvent</th>
                             <th>MethodName</th>
                             <th>Timestamp</th>
