--- a/Tracer.Web/Views/graph.html
+++ b/Tracer.Web/Views/graph.html
@@ -8,7 +8,7 @@
     <script src="../scripts/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../signalr/hubs" type="text/javascript"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="../scripts/vendor/sprintf.js"></script>
+    <script src="../scripts/vendor/sprintfjs/sprintf.js"></script>
 
     <script src="../scripts/public/graph.js"></script>
     
