--- a/Tracer.Web/Views/graph.html
+++ b/Tracer.Web/Views/graph.html
@@ -2,36 +2,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Trace</title>
-
+    <!-- jQuery is required by signalr. -->
     <script src="../scripts/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="../scripts/vendor/signalr/jquery.signalr.min.js" type="text/javascript"></script>
-    <script src="../scripts/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../signalr/hubs" type="text/javascript"></script>
+    <!-- required by graph.js for drawing the graph. -->
     <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <!-- required by graph.js for formatting strings. -->
     <script src="../scripts/vendor/sprintf.js"></script>
 
     <script src="../scripts/public/graph.js"></script>
+    <script src="../scripts/public/graphEventInfo.js"></script>
     
+    <link href="../Scripts/Vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="../Styles/style.css" rel="stylesheet" />
+    
 
     <script type="text/javascript">
 
         $(function () {
-            console.log("Connecting to hub...");
-            $.connection.hub.start().done(function () {
-                console.log("Connected to hub.");
-                Graph.setup("graph");
-            });
-
-            var connection = $.connection.traceHub;
-            connection.client.broadcastMessage = Graph.onEventReceived;
+            Graph.setup("graph");
         });
 
     </script>
 
 </head>
-<body>
-    <div id="graph"></div>
-</body>
+    <body>
+        <div id="event-container" class="event">
+            
+        </div>
+        <div id="graph"></div>
+    </body>
 
 </html>
