--- a/Tracer.Web/Views/graph.html
+++ b/Tracer.Web/Views/graph.html
@@ -2,32 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Trace</title>
-<<<<<<< HEAD
+
     <!-- jQuery is required by signalr. -->
     <script src="../scripts/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="../scripts/vendor/signalr/jquery.signalr.min.js" type="text/javascript"></script>
-=======
-
-    <script src="../scripts/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="../scripts/vendor/signalr/jquery.signalr.min.js" type="text/javascript"></script>
     <script src="../scripts/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
->>>>>>> 19f820e23fee7a2ebc586ccc1a7dc78dfbd7646d
+
     <script src="../signalr/hubs" type="text/javascript"></script>
     <!-- required by graph.js for drawing the graph. -->
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-<<<<<<< HEAD
+
     <!-- required by graph.js for formatting strings. -->
-    <script src="../scripts/vendor/sprintf.js"></script>
-=======
     <script src="../scripts/vendor/sprintfjs/sprintf.js"></script>
->>>>>>> 19f820e23fee7a2ebc586ccc1a7dc78dfbd7646d
 
     <script src="../scripts/public/graph.js"></script>
     <script src="../scripts/public/graphEventInfo.js"></script>
-    
+
     <link href="../Scripts/Vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="../Styles/style.css" rel="stylesheet" />
-    
+
 
     <script type="text/javascript">
 
@@ -38,11 +31,17 @@
     </script>
 
 </head>
-    <body>
-        <div id="event-container" class="event">
-            
+<body>
+   
+        <div class="row">
+            <div class="col-md-3">
+                <div id="event-container" class="event">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div id="graph"></div>
+            </div>
         </div>
-        <div id="graph"></div>
-    </body>
-
+    
+</body>
 </html>
