--- a/Tracer.Web/Styles/style.css
+++ b/Tracer.Web/Styles/style.css
@@ -2,3 +2,10 @@
     border-collapse: separate !important;
 }
 
+.panel-heading {
+    overflow-wrap: break-word !important;
+}
+
+.list-group-item {
+    overflow-wrap: break-word !important;
+}
