--- a/Tracer.Web/Styles/main.css
+++ b/Tracer.Web/Styles/main.css
@@ -1,55 +1,68 @@
-html {
-  font-family: roboto, sans-serif; }
-
 body {
-  background-color: #FFFFFF; }
+    height: 768px;
+}
 
-.center-image {
-  position: absolute;
-  min-height: 100px;
-  min-width: 100px;
-  top: 50%;
-  left: 50%;
-  margin-left: -50px;
-  margin-top: -50px;
-  background-size: 100%; }
+#loading-overlay {
+    position: fixed;
+    width: 100%;
+    height:100%;
+    display: flex;
+    align-items: center;
+    top: 0;
+    background-color: #ffffff;
+}
 
-.center-text {
-  text-align: center;
-  vertical-align: middle;
-  line-height: 90px; }
+.loading-notification {
+  display: flex;
+  margin: 0 auto;
+}
 
-.text-right {
-  text-align: right; }
+/* prevents the navbar from being blocked by the loading overlay. */
+.navbar {
+    z-index: 1000 !important;
+}
 
-paper-toolbar.paper-toolbar-0 {
-  background-color: #28A955; }
+/* standardise arguments and return value panel styling. */
+.jsonview {
+    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif !important;
+    font-size: 13px !important;
+}
 
-/*
-Table styles
-*/
-th {
-  text-align: left; }
+.panel {
+    padding: 10px;
+    min-height: 400px;
+}
 
-event-info td {
-  padding: 2px; }
+.selected {
+    color: #ffffff !important;
+    background-color: #3392e3 !important;
+}
 
-event-info paper-item {
-  margin-top: 0px;
-  border-bottom: 1px solid;
-  border-color: #dbdbdb; }
+.tab-content {
+    padding: 10px !important;
+}
 
-/*
-Graph style overrides
-*/
-.google-visualization-orgchart-node {
-  font-family: roboto, sans-serif !important;
-  border: none !important;
-  color: #727272 !important;
-  background: none !important;
-  background-color: #eee !important;
-  border-radius: 0px !important;
-  -webkit-box-shadow: none !important; }
+.glyphicon-small {
+    font-size: 0.7em !important;
+}
 
-.google-visualization-orgchart-linenode {
-  border-color: #28A955 !important; }
+#event-info-container {
+    padding: 0 !important;
+}
+
+#event-info-container li {
+    padding: 10px !important;
+}
+
+#event-table-container {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+
+#event-info-arguments-tab li {
+    padding: 0px !important;
+}
+
+#event-info-error-tab {
+    overflow-wrap: break-word;
+}
