--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -1,49 +1,321 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Tracer</title>
-    <link href="../scripts/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- jQuery is required by signalr. -->
+    <script src="../scripts/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="../scripts/vendor/signalr/jquery.signalr.min.js" type="text/javascript"></script>
+    <script src="../signalr/hubs" type="text/javascript"></script>
+    <!-- required by the event info to format the event arguments. -->
+    <script src="../scripts/vendor/jquery-jsonview/dist/jquery.jsonview.js"></script>
+    <!-- required by bootstrap. -->
+    <script src="../scripts/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- required by datatables.net. -->
+    <script src="../scripts/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="../scripts/vendor/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <!-- required for file tree visualization of event. -->
+    <script src="../scripts/vendor/jstree/dist/jstree.js"></script>
+
+    <script src="../scripts/public/jstree.httpRequestLabel.js"></script>
+
+    <!-- tracer components. -->
+    
+    <script src="../scripts/public/tracer.core.js"></script>
+    <script src="../scripts/public/tracer.ui.core.js"></script>
+    <script src="../scripts/public/tracer.ui.js"></script>
+    <script src="../scripts/public/tracer.ui.navbar.js"></script>
+    <script src="../scripts/public/tracer.ui.eventTree.js"></script>
+    <script src="../scripts/public/tracer.ui.eventTable.js"></script>
+    <script src="../scripts/public/tracer.ui.eventInfo.js"></script>
+
+    <!-- styles. -->
+    <link rel="stylesheet" href="../styles/bootstrap.min.css">
+    <!-- required to visualise JSON data. -->
+    <link rel="stylesheet" href="../scripts/vendor/jquery-jsonview/dist/jquery.jsonview.css">
+
+    <!-- required by datatables.net. -->
+    <link rel="stylesheet" href="../scripts/vendor/datatables.net-bs/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" href="../scripts/vendor/datatables.net-responsive-bs/css/responsive.bootstrap.min.css">
+
+    <!-- required for file tree visualization of event. -->
+    <link rel="stylesheet" href="../scripts/vendor/jstree-bootstrap-theme/dist/themes/proton/style.min.css">
+
+    <!-- our custom styles. -->
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
 
+
     <div class="container">
-        <div class="well well-sm text-center">
-            <h2>Tracer</h2>
-        </div>
-        <div class="well well-lg">
-            <div class="row" style="margin-bottom:20px">
-                <h4><span class="glyphicon glyphicon-pencil"></span>&nbsp;Test Message</h4>
-                <textarea class="field " id="message" rows="5" style="width:100%" placeholder="Enter a test message"></textarea>
+
+        <div class="row">
+            <div class="col-lg-12">
+
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">Tracer</a>
+                        </div>
+
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                                <li><a id="toggle-tracing-state" href="#">Start Tracing</a></li>
+                                <li>
+                                    <a href="#">Events In Queue <span id="state-event-queue-length" class="badge">0</span>
+                                    </a>
+                                </li>
+                                <li class="dropdown">
+                                    <a id="state-dropdown-toggle" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Events
+                                        <span id="state-dropdown-event-count-badge" class="badge"></span>
+                                        <span class="caret"></span>
+                                    </a>
+                                    <ul id="state-dropdown" class="dropdown-menu" role="menu">
+                                        <li>
+                                            <a id="state-dropdown-clear-state" href="#">Clear State</a>
+                                        </li>
+                                        <li id="state-dropdown-download-state-item">
+                                            <!-- Dynamically created download link goes here. -->
+                                        </li>
+                                        <li>
+                                            <a id="state-import-open" href="#">Import State</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#">Errors <span id="state-event-errors-length" class="badge">0</span>
+                                    </a>
+                                </li>
+                            </ul>
+                            <form class="navbar-form navbar-right" role="search">
+                                <div class="form-group">
+                                    <input id="state-search-input" type="text" class="form-control" placeholder="Search all events">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+
             </div>
-            <div class="row text-center">
-                <input type="button" class="btn btn-primary span2" id="sendmessage" value="Test" />
-                <input type="button" class="btn btn-danger span2" id="clearmessages" value="Clear" />
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-12">
+                <div id="event-table-container" class="panel">
+                    <div id="event-table-container-body">
+                        <!-- datatable generated table goes here. -->
+                    </div>
+
+                    <div class="overlay">
+                        <div class="overlay-message">
+                            <h5>No events to display.</h5>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
         </div>
-        <div class="well well-lg">
-            <div class="row">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>TraceId</th>
-                            <th>MethodId</th>
-                            <th>ParentMethodId</th>
-                            <th>TraceEvent</th>
-                            <th>MethodName</th>
-                            <th>Timestamp</th>
-                        </tr>
-                    </thead>
-                    <tbody id="messages">
-                    </tbody>
-                </table>
+
+        <div class="row">
+
+            <div class="col-lg-6 ">
+                <div id="event-info-container" class="panel">
+
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#event-info-summary-tab" data-toggle="tab">Summary</a></li>
+                        <li><a href="#event-info-log-tab" data-toggle="tab">Log</a></li>
+                        <li><a href="#event-info-audit-tab" data-toggle="tab">Audit</a></li>
+                        <li><a href="#event-info-database-tab" data-toggle="tab">Database Queries</a></li>
+                    </ul>
+                    
+                    <div class="tab-content">
+                            
+                        <div class="tab-pane fade active in" id="event-info-summary-tab">
+                            
+                            <div id="event-info-general">
+                                <div class="info-header">
+                                    <a role="button" data-toggle="collapse" href="#event-info-general-body" aria-expanded="true" aria-controls="event-info-general-body">
+                                        <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                        <strong>General</strong>
+                                    </a>
+                                </div>
+                                <div id="event-info-general-body" class="info-body collapse in">
+                                    <strong>Method name:</strong> <span id="event-info-summary-method-name"></span>
+                                    <br />
+                                    <strong>Parent method name:</strong> <span id="event-info-summary-parent-method-name"></span>
+                                    <br />
+                                    <strong>Time taken:</strong> <span id="event-info-summary-time-taken"></span>ms
+                                    <br />
+                                    <strong>Status:</strong>
+                                    <i class="status-icon success"></i>
+                                    <span id="event-info-summary-status"></span>
+                                    <br/>
+                                </div>
+                            </div>
+
+                            <div id="event-info-http">
+                                <div class="info-header">
+                                    <a role="button" data-toggle="collapse" href="#event-info-http-body" aria-expanded="true" aria-controls="event-info-http-body">
+                                        <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                        <strong>Http Request</strong>
+                                    </a>
+                                </div>
+                                <div id="event-info-http-body" class="info-body collapse in">
+                                    <strong>Url:</strong> <span id="event-info-http-url"></span>
+                                    <br />
+
+                                    <strong>Http method:</strong> <span id="event-info-http-method"></span>
+                                    <br />
+
+                                    <strong>Http status code:</strong>
+                                    <i class="status-icon success"></i>
+                                    <span id="event-info-http-status-code"></span>
+                                    <br />
+                                    
+                                    <!-- Selected event Http request headers start here. -->
+                                    <div>
+                                        <div id="event-info-http-headers" class="info-header">
+                                            <a role="button" data-toggle="collapse" href="#event-info-http-headers-body" aria-expanded="true" aria-controls="event-info-http-headers-body">
+                                                <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                                <strong>Http Headers</strong>
+                                            </a>
+                                        </div>
+                                        <div id="event-info-http-headers-body" class="info-body collapse in">
+                                            
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            
+                            <div id="event-info-arguments">
+                                <div class="info-header">
+                                    <a role="button" data-toggle="collapse" href="#event-info-arguments-body" aria-expanded="true" aria-controls="event-info-arguments-body">
+                                        <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                        <strong>Arguments <span id="event-info-arguments-count">(0)</span></strong>
+                                    </a>
+                                </div>
+                                <div id="event-info-arguments-body" class="info-body collapse in">
+                                    
+                                </div>
+                            </div>
+                            
+                            <div id="event-info-returned-value">
+                                <div class="info-header">
+                                    <a role="button" data-toggle="collapse" href="#event-info-returned-value-body" aria-expanded="true" aria-controls="event-info-returned-value-body">
+                                        <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                        <strong>Returned Value</strong>
+                                    </a>
+                                </div>
+                                <div id="event-info-returned-value-body" class="info-body collapse in">
+                                    
+                                </div>
+                            </div>
+                            
+                            <div id="event-info-error">
+                                <div class="info-header">
+                                    <a role="button" data-toggle="collapse" href="#event-info-error-body" aria-expanded="true" aria-controls="event-info-error-body">
+                                        <i class="glyphicon glyphicon-triangle-bottom"></i>
+                                        <strong>Errors</strong>
+                                    </a>
+                                </div>
+                                <div id="event-info-error-body" class="info-body collapse in">
+                                    <strong>Error message:</strong> <span id="event-info-error-message"></span> <br/>
+                                    <strong>Stack trace:</strong> <span id="event-info-error-stack-trace"></span>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="tab-pane fade" id="event-info-log-tab">
+                            Related log messages go here.
+                        </div>
+                        
+                        <div class="tab-pane fade" id="event-info-audit-tab">
+                            Related audit messages go here.
+                        </div>
+                        
+                        <div class="tab-pane fade" id="event-info-database-tab">
+                            Related database queries go here.
+                        </div>
+
+                    </div>
+
+                    <div class="no-event-info-overlay">
+                        <div class="overlay-message">
+                            <h5>Select an event to view a summary.</h5>
+                        </div>
+                    </div>
+
+                    <div class="overlay">
+                        <div class="overlay-message">
+                            <h5>No events to display.</h5>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-6 ">
+                <div id="event-tree-container" class="pre-scrollable panel">
+                    <div id="event-tree-container-header">
+                        <ul class="nav nav-tabs pull-right">
+                            <li>
+                                <a id="event-tree-expand" href="#" data-toggle="tab" class="glyphicon glyphicon-plus glyphicon-small"></a>
+                            </li>
+                            <li>
+                                <a id="event-tree-collapse" href="#" data-toggle="tab" class="active glyphicon glyphicon-minus glyphicon-small"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="event-tree-container-body">
+                        <!-- jstree generated tree goes here. -->
+                    </div>
+
+                    <div class="overlay">
+                        <div class="overlay-message">
+                            <h5>No events to display.</h5>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="loading-overlay" class="overlay">
+        <div class="overlay-message">
+            <h4>Please click here or "Start Tracing" to begin.</h4>
+        </div>
+    </div>
+
+    <div id="state-import-modal" class="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+                    <h4 class="modal-title">Import state</h4>
+                </div>
+                <div class="modal-body">
+                    <textarea id="state-import-value" class="text-area" placeholder="Insert trace events to import here..."></textarea>
+                    <span id="state-import-validation-message" class="error"></span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button id="state-import-submit" type="button" class="btn btn-primary">Import</button>
+                </div>
             </div>
         </div>
     </div>
 
-    <script src="../scripts/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="../scripts/vendor/signalr/jquery.signalr.min.js" type="text/javascript"></script>
-    <script src="../scripts/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../signalr/hubs" type="text/javascript"></script>
-    <script src="../scripts/public/tracer.js" type="text/javascript"></script>
 </body>
 </html>
